--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,17 +1,15 @@
 ---
 # tasks file for dr-provision
+- name: Gather OS specific variables
+  include_vars: "{{ item }}"
+  with_first_found:
+    - "{{ ansible_distribution|lower }}-{{ ansible_distribution_major_version }}.yml"
+    - "{{ ansible_distribution|lower }}.yml"
+    - "{{ ansible_os_family|lower }}.yml"
+
 - block:
-  - name: Setup prereqs
-    include_tasks: prereqs.yml
-
-  - name: Setup alpine
-    include_tasks: alpine.yml
-
-  - name: Setup debian
-    include_tasks: debian.yml
-
-  - name: Setup redhat
-    include_tasks: redhat.yml
+  - name: Package installation tasks
+    include_tasks: "install_packages_{{ ansible_pkg_mgr }}.yml"
 
   - name: Install dr-provision
     include_tasks: install.yml
