--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -26,7 +26,7 @@
 - name: Install DR Provision binaries
   copy:
     src: "{{ provision_download_directory }}/bin/linux/{{ provision_architecture_map[ansible_architecture] }}/{{ item }}"
-    dest: "/usr/local/bin/{{ item }}"
+    dest: "{{ provision_bin_directory }}/{{ item }}"
     mode: 0755
     remote_src: yes
   with_items:
