--- a/tasks/install_packages_apk.yml
+++ b/tasks/install_packages_apk.yml
@@ -11,13 +11,15 @@
     dest: /etc/apk/keys/sgerrand.rsa.pub
     mode: 0440
   when: provision_glibc_environment
+  ignore_errors: yes
 
 - name: download glibc package
   get_url:
     url: "{{ glibc_package_url }}"
     dest: /tmp/glibc-2.26-r0.apk
     mode: 0644
-  when: docker_glibc_environment
+  when: provision_glibc_environment
+  ignore_errors: yes
 
 - name: install packages
   apk:
@@ -28,6 +30,7 @@
 - name: install glibc
   raw: apk add /tmp/glibc-2.26-r0.apk
   when: provision_glibc_environment
+  ignore_errors: yes
 
 - name: update all installed packages
   apk:
@@ -35,3 +38,4 @@
 
 - name: clean up cache packages
   raw: rm -rf /var/cache/apk/*
+  ignore_errors: yes
