--- a/tasks/install_packages_apk.yml
+++ b/tasks/install_packages_apk.yml
@@ -1,7 +1,7 @@
 ---
-- name: install packages
+- name: Install required packages for Provision (Alpine)
   apk:
-    name: bash,ca-certificates,rsync,tar,zip
+    name: "{{ provision_packages | join(',') }}"
     state: present
     update_cache: yes
 
@@ -20,12 +20,6 @@
     mode: 0644
   when: provision_glibc_environment
   ignore_errors: yes
-
-- name: install packages
-  apk:
-    name: git,jq,unzip,p7zip,libarchive-tools
-    state: present
-    update_cache: yes
 
 - name: install glibc
   raw: apk add /tmp/glibc-2.26-r0.apk
